# pyspark-deploy

./: .gitignore  README.md  cloud-config.yaml  cluster.py  main.tf  pyproject.toml  pyspark_deploy.py  setup.sh  variables.tf
ansible/: ansible.cfg  bake-ami.yml  deploy.yml  spark-create.yml  spark-destroy.yml
ansible/roles/docker-ami/tasks/: main.yml
ansible/roles/spark/tasks/: main.yml
ansible/terraform/: cluster.tf
ansible/terraform/docker-base/: inventory.tpl  main.tf  variables.tf
ansible/terraform/spark/: main.tf
ansible/terraform/vpc/: outputs.tf
docker/: docker-compose.yml
terraform/cluster/: main.tf  variables.tf
terraform/roles/spark/defaults/: main.yml
terraform/spark-cluster/: ansible.cfg  main.tf  web-admin.sh
terraform/spark-cluster/roles/spark/defaults/: main.yml
terraform/spark-cluster/roles/spark/templates/: docker-bash.sh.j2  spark-defaults.conf.j2
